# apps/api/config/app.php
@@ -8,7 +8,7 @@ return [
     |--------------------------------------------------------------------------
     */
 
-    'name' => env('APP_NAME', 'VoxMorph'),
+    'name' => env('APP_NAME', 'MorphVox'),
 
     /*
     |--------------------------------------------------------------------------
