# apps/api/config/database.php
@@ -34,8 +34,8 @@ return [
             'url' => env('DB_URL'),
             'host' => env('DB_HOST', '127.0.0.1'),
             'port' => env('DB_PORT', '5432'),
-            'database' => env('DB_DATABASE', 'voxmorph'),
-            'username' => env('DB_USERNAME', 'voxmorph'),
+            'database' => env('DB_DATABASE', 'morphvox'),
+            'username' => env('DB_USERNAME', 'morphvox'),
             'password' => env('DB_PASSWORD', ''),
             'charset' => env('DB_CHARSET', 'utf8'),
             'prefix' => '',
@@ -49,8 +49,8 @@ return [
             'url' => env('DB_URL'),
             'host' => env('DB_HOST', '127.0.0.1'),
             'port' => env('DB_PORT', '3306'),
-            'database' => env('DB_DATABASE', 'voxmorph'),
-            'username' => env('DB_USERNAME', 'voxmorph'),
+            'database' => env('DB_DATABASE', 'morphvox'),
+            'username' => env('DB_USERNAME', 'morphvox'),
             'password' => env('DB_PASSWORD', ''),
             'unix_socket' => env('DB_SOCKET', ''),
             'charset' => env('DB_CHARSET', 'utf8mb4'),
@@ -89,7 +89,7 @@ return [
 
         'options' => [
             'cluster' => env('REDIS_CLUSTER', 'redis'),
-            'prefix' => env('REDIS_PREFIX', 'voxmorph_database_'),
+            'prefix' => env('REDIS_PREFIX', 'morphvox_database_'),
         ],
 
         'default' => [
